// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Doesn't accept duplicate flowers 1`] = `
[
  {
    "location": "body",
    "msg": "Flower with that name already exists",
    "path": "name",
    "type": "field",
    "value": "duplicate",
  },
]
`;

exports[`Doesn't accept nonexistent regions 1`] = `
[
  {
    "location": "body",
    "msg": "Region does not exist",
    "path": "regionID",
    "type": "field",
    "value": "asdfasdf",
  },
]
`;

exports[`Empty input Doesn't accept empty input for description 1`] = `
[
  {
    "location": "body",
    "msg": "Description can't be empty",
    "path": "description",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Empty input Doesn't accept empty input for name 1`] = `
[
  {
    "location": "body",
    "msg": "Name can't be empty",
    "path": "name",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Empty input Doesn't accept empty input for numberInStock 1`] = `
[
  {
    "location": "body",
    "msg": "Number in stock can't be empty",
    "path": "numberInStock",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Empty input Doesn't accept empty input for price 1`] = `
[
  {
    "location": "body",
    "msg": "Price can't be empty",
    "path": "price",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Just spaces Doesn't accept just spaces for description 1`] = `
[
  {
    "location": "body",
    "msg": "Description can't be empty",
    "path": "description",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Just spaces Doesn't accept just spaces for name 1`] = `
[
  {
    "location": "body",
    "msg": "Name can't be empty",
    "path": "name",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Just spaces Doesn't accept just spaces for numberInStock 1`] = `
[
  {
    "location": "body",
    "msg": "Number in stock can't be empty",
    "path": "numberInStock",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Just spaces Doesn't accept just spaces for price 1`] = `
[
  {
    "location": "body",
    "msg": "Price can't be empty",
    "path": "price",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Only accepts numbers for number in stock 1`] = `
[
  {
    "location": "body",
    "msg": "Number in stock needs to be a number",
    "path": "numberInStock",
    "type": "field",
    "value": "not a number",
  },
]
`;

exports[`Price validation $3aaa flower price gives error 1`] = `
[
  {
    "location": "body",
    "msg": "Price needs to be in $x.xx format, e.g $3.86 or $287.00",
    "path": "price",
    "type": "field",
    "value": "$3aaa",
  },
]
`;

exports[`Price validation 32 flower price gives error 1`] = `
[
  {
    "location": "body",
    "msg": "Price needs to be in $x.xx format, e.g $3.86 or $287.00",
    "path": "price",
    "type": "field",
    "value": "32",
  },
]
`;

exports[`Price validation 32.00 flower price gives error 1`] = `
[
  {
    "location": "body",
    "msg": "Price needs to be in $x.xx format, e.g $3.86 or $287.00",
    "path": "price",
    "type": "field",
    "value": "32.00",
  },
]
`;
